<resources>
    <string name="app_name">TheMovieDB</string>
    <string name="movie">Movie</string>
    <string name="favorite">Favorite</string>
    <string name="popular">Popular</string>
    <string name="movies">Movies</string>
    <string name="upcoming">Upcoming</string>
    <string name="check_internet_fail">check internet fail</string>
    <string name="_8">8.8</string>
    <string name="vote_text">vote text</string>
    <string name="results_found">results found</string>
    <string name="trailer">trailer</string>
    <string name="produces">produces</string>
    <string name="casts">casts</string>
    <string name="vote">vote</string>
    <string name="release_date">release date</string>
    <string name="message_null_result">0 result</string>
    <string name="genres">Genres</string>
    <string name="categories">Categories</string>
    <string name="top_rated">Top rated</string>
    <string name="menu_search">Search</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_favorite">Favorite</string>
    <string name="movie_name">Name</string>

    <string name="notification_delete_success">Delete favorite success</string>
    <string name="notification_delete_failed">Delete favorite failed</string>
    <string name="notification_add_favorite_success">This movie is added to favorite items</string>
    <string name="notification_add_favorite_failed">Failed</string>
    <string name="nothing_found">Nothing found</string>
    <string name="title_exit_app">Exit T-Movie</string>
    <string name="notification_exit_app">" Are you sure you want to exit?"</string>
    <string name="title_yes">Yes</string>
    <string name="title_no">No</string>

</resources>
